{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 349,
  "lineage": "b176de90-862f-d7d7-8932-ab359642eadb",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "ido-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/frontendIPConfigurations/ido-frontend-ip",
                "inbound_nat_rules": [
                  "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/inboundNatRules/ido-inbound-nat-rule"
                ],
                "load_balancer_rules": [
                  "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/loadBalancingRules/ido-lb-rule"
                ],
                "name": "ido-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/publicIPAddresses/ido-public-ip"
              }
            ],
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb",
            "location": "westeurope",
            "name": "ido-lb",
            "resource_group_name": "ido-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.ido-public-ip",
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/ido-nic-0/ipConfigurations/testconfiguration-0",
              "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/ido-nic-1/ipConfigurations/testconfiguration-1"
            ],
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/backendAddressPools/ido-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/loadBalancingRules/ido-lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb",
            "name": "ido-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.ido-lb",
            "azurerm_public_ip.ido-public-ip",
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/ido-nic-0/ipConfigurations/testconfiguration-0",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/frontendIPConfigurations/ido-frontend-ip",
            "frontend_ip_configuration_name": "ido-frontend-ip",
            "frontend_port": 22,
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/inboundNatRules/ido-inbound-nat-rule",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb",
            "name": "ido-inbound-nat-rule",
            "protocol": "Tcp",
            "resource_group_name": "ido-resources"
          },
          "dependencies": [
            "azurerm_lb.ido-lb",
            "azurerm_public_ip.ido-public-ip",
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/probes/ido-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb",
            "name": "ido-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.ido-lb",
            "azurerm_public_ip.ido-public-ip",
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "load_balancer_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/backendAddressPools/ido-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/frontendIPConfigurations/ido-frontend-ip",
            "frontend_ip_configuration_name": "ido-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/loadBalancingRules/ido-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb",
            "name": "ido-lb-rule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.ido-lb",
            "azurerm_lb_backend_address_pool.backend_address_pool",
            "azurerm_public_ip.ido-public-ip",
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "chef-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/chef-nic-0",
            "internal_domain_name_suffix": "gqupcni2ezoenevjwawrhg2k4b.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration-0",
                "primary": true,
                "private_ip_address": "10.123.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/publicIPAddresses/ido-chef-public-ip",
                "subnet_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/virtualNetworks/ido-vn/subnets/ido-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-BF-34-D0",
            "name": "chef-nic-0",
            "private_ip_address": "10.123.1.7",
            "private_ip_addresses": [
              "10.123.1.7"
            ],
            "resource_group_name": "ido-resources",
            "virtual_machine_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Compute/virtualMachines/chef-server"
          },
          "dependencies": [
            "azurerm_public_ip.ido-chef-public-ip",
            "azurerm_resource_group.ido-resources-tf",
            "module.idos_virtual_network_subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ido-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/ido-nic-0",
            "internal_domain_name_suffix": "gqupcni2ezoenevjwawrhg2k4b.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration-0",
                "primary": true,
                "private_ip_address": "10.123.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/virtualNetworks/ido-vn/subnets/ido-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-4C-8B-16",
            "name": "ido-nic-0",
            "private_ip_address": "10.123.1.6",
            "private_ip_addresses": [
              "10.123.1.6"
            ],
            "resource_group_name": "ido-resources",
            "virtual_machine_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Compute/virtualMachines/ido-vm-0"
          },
          "dependencies": [
            "azurerm_resource_group.ido-resources-tf",
            "module.idos_virtual_network_subnet.azurerm_subnet.subnet",
            "module.idos_virtual_network_subnet.azurerm_virtual_network.virtual-network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/ido-nic-1",
            "internal_domain_name_suffix": "gqupcni2ezoenevjwawrhg2k4b.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration-1",
                "primary": true,
                "private_ip_address": "10.123.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/virtualNetworks/ido-vn/subnets/ido-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-48-62-18",
            "name": "ido-nic-1",
            "private_ip_address": "10.123.1.5",
            "private_ip_addresses": [
              "10.123.1.5"
            ],
            "resource_group_name": "ido-resources",
            "virtual_machine_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Compute/virtualMachines/ido-vm-1"
          },
          "dependencies": [
            "azurerm_resource_group.ido-resources-tf",
            "module.idos_virtual_network_subnet.azurerm_subnet.subnet",
            "module.idos_virtual_network_subnet.azurerm_virtual_network.virtual-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "ido-lb-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/backendAddressPools/ido-backend-pool",
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/ido-nic-0/ipConfigurations/testconfiguration-0|/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/backendAddressPools/ido-backend-pool",
            "ip_configuration_name": "testconfiguration-0",
            "network_interface_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/ido-nic-0"
          },
          "dependencies": [
            "azurerm_lb.ido-lb",
            "azurerm_lb_backend_address_pool.backend_address_pool",
            "azurerm_network_interface.ido-nic",
            "azurerm_public_ip.ido-public-ip",
            "azurerm_resource_group.ido-resources-tf",
            "module.idos_virtual_network_subnet.azurerm_subnet.subnet",
            "module.idos_virtual_network_subnet.azurerm_virtual_network.virtual-network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/backendAddressPools/ido-backend-pool",
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/ido-nic-1/ipConfigurations/testconfiguration-1|/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/loadBalancers/ido-lb/backendAddressPools/ido-backend-pool",
            "ip_configuration_name": "testconfiguration-1",
            "network_interface_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkInterfaces/ido-nic-1"
          },
          "dependencies": [
            "azurerm_lb.ido-lb",
            "azurerm_lb_backend_address_pool.backend_address_pool",
            "azurerm_network_interface.ido-nic",
            "azurerm_public_ip.ido-public-ip",
            "azurerm_resource_group.ido-resources-tf",
            "module.idos_virtual_network_subnet.azurerm_subnet.subnet",
            "module.idos_virtual_network_subnet.azurerm_virtual_network.virtual-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ido-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkSecurityGroups/ido-sg1",
            "location": "westeurope",
            "name": "ido-sg1",
            "resource_group_name": "ido-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ido-dev-rule1",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "enviroment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ido-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkSecurityGroups/ido-sg1/securityRules/ido-dev-rule1",
            "name": "ido-dev-rule1",
            "network_security_group_name": "ido-sg1",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "ido-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ido-sg",
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ido-chef-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/publicIPAddresses/ido-chef-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.103.255.28",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "ido-chef-public-ip",
            "resource_group_name": "ido-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ido-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/publicIPAddresses/ido-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.88.203.20",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "ido-public-ip",
            "resource_group_name": "ido-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ido-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/virtualNetworks/ido-vn/subnets/ido-subnet",
            "network_security_group_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkSecurityGroups/ido-sg1",
            "subnet_id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/virtualNetworks/ido-vn/subnets/ido-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.ido-sg",
            "azurerm_resource_group.ido-resources-tf",
            "module.idos_virtual_network_subnet.azurerm_subnet.subnet",
            "module.idos_virtual_network_subnet.azurerm_virtual_network.virtual-network"
          ]
        }
      ]
    },
    {
      "module": "module.idos_virtual_network_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/virtualNetworks/ido-vn/subnets/ido-subnet",
            "name": "ido-subnet",
            "resource_group_name": "ido-resources",
            "virtual_network_name": "ido-vn"
          },
          "dependencies": [
            "azurerm_resource_group.ido-resources-tf",
            "module.idos_virtual_network_subnet.azurerm_virtual_network.virtual-network"
          ]
        }
      ]
    },
    {
      "module": "module.idos_virtual_network_subnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "35f12834-261c-465c-92a9-b02d139b8af1",
            "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/virtualNetworks/ido-vn",
            "location": "westeurope",
            "name": "ido-vn",
            "resource_group_name": "ido-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/virtualNetworks/ido-vn/subnets/ido-subnet",
                "name": "ido-subnet",
                "security_group": "/subscriptions/6a9c90c6-97b8-4d6b-9fce-16da54e5bd11/resourceGroups/ido-resources/providers/Microsoft.Network/networkSecurityGroups/ido-sg1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.ido-resources-tf"
          ]
        }
      ]
    }
  ]
}